chore: Make local TestBench testing easier